[CHORE hosting]- gh-pages initial commit

--- a/product-detail.html
+++ b/product-detail.html
@@ -35,7 +35,7 @@
                 </p>
                  <h3>sizes</h3>
                  <p>XXL, XL, M, S</p> <br>
-                 <h3>Colours</h3>
+                 <h3>Colours</h
                  <p>Red, Ash, White</p> <br>
                  <h3>Stock : <p> 50 </p></h3> <br>
                  <h3>About Vendor</h3>
