--- a/admin.html
+++ b/admin.html
@@ -58,7 +58,7 @@
                                                                         <input type="text" placeholder="Description" required>
                                                                     </div>
                                                                     <div>
-                                                                        <input type="text" placeholder="Unit Prize" required>
+                                                                        <input type="text" placeholder="Unit Price" required>
                                                                     </div>
                                                                     <div >
                                                                         <select name="category" id="">category
